# git-dashboard

./: LICENSE  Makefile  README.md  pyproject.toml
git_dashboard/: dashboard.py
