[tool.poetry]
name = "git-dashboard"
version = "0.1.0"
description = ""
authors = ["Yanay Goor <yanay.goor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pygit2 = "^1.5.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"
black = "^20.8b1"
isort = "^5.7.0"

[tool.poetry.scripts]
git-dashboard = "git_dashboard.dashboard:main"
git-dcheckout = "git_dashboard.dashboard:checkout"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
